[B]1.2.2[/B]
- Updated HTML parsing due to upstream changes.
- Added li.setInfo video for Kodi 18.
- Swapped to mobile stream because the website stream is currently unavailable.

[B]1.2.1[/B]
- Provide HD HLS for live stream.
- Added thumbnailImage for live stream.

[B]1.2.0[/B]
- Updated HTML parsing due to upstream changes.
- Updated icon.

[B]1.1.0[/B]
- Updated HTML parsing due to upstream changes.
- Updated icon.

[B]1.0.2[/B]
- Updated HTML parsing due to upstream changes.

[B]1.0.1[/B]
- updated required python API version to 2.1.0. This addon should now work with both XBMC 12 (Frodo) and XBMC 13 (Gotham).
- added addon.xml optional metadata.

[B]1.0.0[/B]
- first release
