@@ -1,3 +1,7 @@
+[B]1.3.0[/B]
+- Updated HTML parsing due to upstream changes.
+- Added settings to select web stream or mobile app stream.
+
 [B]1.2.2[/B]
 - Updated HTML parsing due to upstream changes.
 - Added li.setInfo video for Kodi 18.
